Re-Add Overflow-y hidden to fix vertical scrolling problem

--- a/style.css
+++ b/style.css
@@ -667,6 +667,7 @@ ul li:not(:first-of-type) a:hover {
   display: flex;
   gap: 5px;
   position: relative;
+  overflow-y: hidden;
   overflow-x: scroll;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
